--- a/styles/combination.css
+++ b/styles/combination.css
@@ -204,7 +204,7 @@ header
 {
     position: relative;
     width: 85%;
-    padding: 30px 100px;
+    padding: 30px 0px;
     display: grid;
     grid-template-columns: auto auto auto;
     grid-gap: 1%;
@@ -309,4 +309,10 @@ footer
 footer p
 {
     font-size: 20px;
+}
+iframe
+{
+    width: 80%;
+    height: 100vh;
+    border-radius: 20px;
 }
