--- a/login/login.css
+++ b/login/login.css
@@ -24,8 +24,7 @@
     background: transparent;
     border: 2px solid rgba(255,255,255,.2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    
+    box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
@@ -108,6 +107,11 @@
     font-size: 16px;
     color: #333;
     font-weight: 600;
+}
+.wrapper .btn:hover
+{
+    background-color: black;
+    color: white;
 }
 .wrapper .register-link
 {
