--- a/styles/combination.css
+++ b/styles/combination.css
@@ -15,8 +15,14 @@ body
     justify-content: center;
     align-items: center;
     height: auto;
-    background:#350048;
+    /* background:#350048; */
     padding: 1% 0% 0% 0%;
+    background-image: url(../img/background2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 .container
 {
@@ -159,14 +165,14 @@ body
     margin: 30px;
     box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
     border-radius: 15px;
-    background: rgba(255,255,255,0.1);
+    background: rgba(0, 0, 0, 0.1);
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
     border-top: 1px solid rgba(255,255,255,0.5);
     border-left: 1px solid rgba(255,255,255,0.5);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(50px);
     -webkit-box-reflect: below 1px linear-gradient(transparent,#0003);
 
 }
@@ -315,4 +321,4 @@ iframe
     width: 80%;
     height: 100vh;
     border-radius: 20px;
-}
+} 
