--- a/styles/cuerpo.css
+++ b/styles/cuerpo.css
@@ -1,6 +1,6 @@
     .cuerpo
     {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.1);
         display: flex;
         flex-direction: column;
         gap: 5vh;
@@ -11,6 +11,7 @@
         box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
         border-left:solid 1px white;
         border-top: solid 1px white;
+        backdrop-filter: blur(25px);
     }
     .caja
     {
@@ -24,6 +25,7 @@
         padding: 5%;
         border-radius: 50px;
         border: solid 2px rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(50px);
     }
     .caja .parrafos
     {
@@ -43,12 +45,13 @@
     .caja1
     {
         flex-direction: row;   
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(0, 0, 0, 0.1);
         text-align: left;
         box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
         border: 0;
         border-top: solid 1px white;
         border-left: solid 1px white;
+        backdrop-filter: blur(25px);
     }
     .caja1 p
     {
@@ -57,6 +60,7 @@
         padding: 5%;
         border-radius: 20px;
         border: solid 2px rgba(255, 255, 255, 0.1);
+        backdrop-filter: blur(50px);
     }
     .caja aside
     {
