--- a/contact/contact.css
+++ b/contact/contact.css
@@ -21,7 +21,7 @@
 .wrapper
 {
     width: 500px;
-    background: transparent;
+    background: rgba(0, 0, 0, 0.3);
     border: 2px solid rgba(255,255,255,.2);
     backdrop-filter: blur(20px);
     box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
