--- a/styles/socialmediabutton.css
+++ b/styles/socialmediabutton.css
@@ -17,6 +17,7 @@
      border-radius: 50%;
      box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
      backdrop-filter: blur(10px);
+     background-color: rgba(255,255,255,0.1);
      display: flex;
      justify-content: center;
      align-items: center;
@@ -54,7 +55,8 @@
      transform-origin: 110px;
      transition: 0.5s;
      transition-delay: calc(0.05s);
-     transform: rotate(calc(360deg / 3 * var(--i))); 
+     transform: rotate(calc(360deg / 4 * var(--i))); 
+     transition-delay: calc(0.1s * var(--i));
      scale: 0;
      z-index: 1;
      overflow: hidden;
@@ -96,7 +98,7 @@
      color: #fff;
      font-size: 2.25em; 
      border-radius: 50%;
-     transform: rotate(calc(360deg / -3 * var(--i)));
+     transform: rotate(calc(360deg / -4 * var(--i)));
      box-shadow: 0 3px 4px rgba(0,0,0,0.15);
 
  }
