--- a/styles/contact.css
+++ b/styles/contact.css
@@ -7,21 +7,15 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
-/* body
+body
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url('./img/img.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
+     background:#350048;
 
-} */
+}
 .wrapper
 {
-    width: 420px;
-    background: rgba(0, 0, 0, 0.3);
+    width: 500px;
+    background: rgba(255, 255, 255, 0.1);
     border: 2px solid rgba(255,255,255,.2);
     backdrop-filter: blur(20px);
     box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
@@ -34,6 +28,10 @@
     {
         width: 360px;
     }
+    .boxform
+    {
+        flex-direction: column;
+    }
 }
 .wrapper h1
 {
@@ -45,7 +43,12 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 30px 0;
+    margin: 20px 0;
+}
+.boxform
+{
+    display: flex;
+    gap: 20px;
 }
 
 .input-box input
@@ -129,6 +132,11 @@
 {
     text-decoration: underline;
 
+}
+textarea
+{
+    width: 100%;
+    height: 100%;   
 }
 
 
