--- a/styles/login.css
+++ b/styles/login.css
@@ -7,21 +7,15 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
-/* body
+body
 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url('./img/img.jpg') no-repeat;
-    background-size: cover;
-    background-position: center;
+     background:#350048;
 
-} */
+}
 .wrapper
 {
-    width: 500px;
-    background: rgba(0, 0, 0, 0.3);
+    width: 420px;
+    background: rgba(255, 255, 255, 0.1);
     border: 2px solid rgba(255,255,255,.2);
     backdrop-filter: blur(20px);
     box-shadow: 20px 20px 50px rgb(0,0,0,0.5);
@@ -34,10 +28,6 @@
     {
         width: 360px;
     }
-    .boxform
-    {
-        flex-direction: column;
-    }
 }
 .wrapper h1
 {
@@ -49,12 +39,7 @@
     position: relative;
     width: 100%;
     height: 50px;
-    margin: 20px 0;
-}
-.boxform
-{
-    display: flex;
-    gap: 20px;
+    margin: 30px 0;
 }
 
 .input-box input
@@ -138,11 +123,6 @@
 {
     text-decoration: underline;
 
-}
-textarea
-{
-    width: 100%;
-    height: 100%;   
 }
 
 
